test/e2e/pass/generics/decl_true.cst
fn id<T>(value: T) -> T where decl(1 + 2) {
    value
}

fn main() -> num {
    id(0)
}
