test/e2e/fail_compile/generics/decl_false.cst
fn id<T>(value: T) -> T where decl(1 + true) {
    value
}

fn main() -> num {
    id(0)
}
